@startuml

title __REMOTE's Class Diagram__\n

  package com.example.aflah.tracki_master {
    package com.example.aflah.tracki_master.Data {
      package com.example.aflah.tracki_master.Data.remote {
        class DetailPromoRemoteDataSource {
            + getPromotionById()
            + sendRedeemData()
        }
      }
    }
  }
  

  package com.example.aflah.tracki_master {
    package com.example.aflah.tracki_master.Data {
      package com.example.aflah.tracki_master.Data.remote {
        class ProductRemoteDataSource {
            + getProductById()
            + getMakanan()
            + getMinuman()
            + getSearchList()
        }
      }
    }
  }
  

  package com.example.aflah.tracki_master {
    package com.example.aflah.tracki_master.Data {
      package com.example.aflah.tracki_master.Data.remote {
        class PromotionRemoteDataSource {
            + getAllPromotion()
        }
      }
    }
  }
  

  package com.example.aflah.tracki_master {
    package com.example.aflah.tracki_master.Data {
      package com.example.aflah.tracki_master.Data.remote {
        class ReviewRemoteDataSource {
            + getReview()
            + sendReview()
        }
      }
    }
  }
  

  package com.example.aflah.tracki_master {
    package com.example.aflah.tracki_master.Data {
      package com.example.aflah.tracki_master.Data.remote {
        class StoreRemoteDataSource {
            + getStoreUrlImages()
            + getStoreDetail()
            + getSearchList()
        }
      }
    }
  }
  

  package com.example.aflah.tracki_master {
    package com.example.aflah.tracki_master.Data {
      package com.example.aflah.tracki_master.Data.remote {
        class UserRemoteDataSource {
            + updateProfile()
            + getUserById()
            + resetUserPassword()
            + registerUser()
            + loginUser()
        }
      }
    }
  }
  

  DetailPromoRemoteDataSource -up-|> DetailPromoSource
  DetailPromoRemoteDataSource o-- ApiInterface : apiInterface
  ProductRemoteDataSource -up-|> ProductSource
  ProductRemoteDataSource o-- ApiInterface : apiInterface
  PromotionRemoteDataSource -up-|> PromotionSource
  PromotionRemoteDataSource o-- ApiInterface : apiInterface
  ReviewRemoteDataSource -up-|> ReviewTokoSource
  ReviewRemoteDataSource o-- ApiInterface : apiInterface
  StoreRemoteDataSource -up-|> StoreSource
  StoreRemoteDataSource o-- ApiInterface : apiInterface
  UserRemoteDataSource -up-|> UserSource
  UserRemoteDataSource o-- ApiInterface : apiInterface


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
